--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,39 +1,34 @@
-.navbar{
-    display: flex;
-    background-color: black;
-}
-.navbar-logo{
-    display: flex;
-}
-.navbar-logo img{
-    width: 5.5rem;
-    height: auto;
+.col {
+  display: flex;
+  background-color: rgb(148, 50, 50);
 }
 
-.nav ul{
-    list-style-type: none;
+.col img {
+  width: 5.5rem;
+  height: auto;
 }
-.nav .link{
-    text-decoration: none;
-    font-size: 1.5rem;
-    color: white;
-    margin-right: 1rem;
+
+.col ul {
+  list-style-type: none;
 }
-.navbar-logo h1{
-    color: white;
-    margin-right: 1rem;
-    margin-top: 0.5rem;
+.nav .link {
+  text-decoration: none;
+  font-size: 1.5rem;
+  color: white;
+  margin-right: 1rem;
 }
-.nav button{
-    width: 7rem;
-    height: 2.5rem;
-    border: 2px solid red;
-    font-size: 1rem;
-    background-color: white;
-    color:black;
-    border-radius: 2rem;
-    cursor: pointer;
+.col .nav {
+  align-items: center;
+  justify-content: center;
 }
-.nav button:hover{
-    background-color: rgba(194, 12, 12, 0.904);
+.col h1 {
+  color: white;
+  margin-right: 1rem;
+  margin-top: 0.5rem;
+}
+.col h2{
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 1.5rem;
 }
