--- a/src/components/Products.css
+++ b/src/components/Products.css
@@ -1,12 +1,13 @@
-.sejur-Maldive img{
-    width: 70vh;
-    border-radius: 2rem;
+.sejur-Maldive img {
+  width: 70vh;
+  border-radius: 2rem;
 }
-.sejur-Maldive{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+.sejur-Maldive {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
-.container h1,p{
-    text-align: center;
+.container h1,
+p {
+  text-align: center;
 }
