--- a/src/components/Products.css
+++ b/src/components/Products.css
@@ -1,8 +1,13 @@
-.sejur-Maldive img {
+.col-products img {
   width: 70vh;
   border-radius: 2rem;
+  border-radius: 2rem;
+  border-color: blue;
+  background-color: brown;
+  padding: 0.5rem;
+  margin-right: 1rem;
 }
-.sejur-Maldive {
+.col-products {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
